<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources">
    <string name="app_name">Lightning Dots</string>
    <string name="company_name">Del Squared, LLC</string>
    <string name="trademark_name">Del Squared</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_fs">Test_LightningDots</string>
    <string name="ads_ad_unit_game_interstitials">ca-app-pub-3137388249745402/5514643977</string>
    <string name="ads_ad_unit_bottom_banner">ca-app-pub-3137388249745402/2671608772</string>
    <string name="admob_publisher_id">pub-3137388249745402</string>
    <string name="event_category_buttonclick">BUTTON_CLICK</string>
    <string name="event_category_settingchange">SETTING_CHANGE</string>
    <string name="event_actionid_sendfeedback">SEND_FEEDBACK</string>
    <string name="event_actionid_settings_googleanalytics">TOGGLE_GOOGLE_ANALYTICS</string>
    <string name="event_actionid_settings_delete_game_history">DELETE_GAME_HISTORY</string>
    <string name="event_actionid_settings_showinstructions">SHOW_INSTRUCTIONS</string>
    <string name="ga_screenname_activitymain">LightningDots ActivityMain</string>
    <string name="ga_screenname_activitygame">LightningDots ActivityGame</string>
    <string name="ga_screenname_activitysettings">LightningDots ActivitySettings</string>
    <string name="ga_screenname_activityabout">LightningDots ActivityAbout</string>
    <string name="ga_screenname_activitytermsofservice">LightningDots ActivityTermsOfService</string>
    <string name="ga_screenname_activityprivacypolicy">LightningDots ActivityPrivacyPolicy</string>
    <string name="ga_screenname_activitystore">LightningDots ActivityStore</string>
    <string name="ga_screenname_activityinstructions">LightningDots ActivityInstructions</string>
    <string name="title_activity_splash">@string/app_name</string>
    <string name="request_timeout">3000</string>
    <string name="request_socket_timeout">5000</string>
    <string name="versions_url">https://www.delsquaredllc.com/versions.php</string>
    <string name="json_response_key_termsofservice">tos</string>
    <string name="json_response_key_privacypolicy">pp</string>
    <string name="terms_of_service_activity_title">Terms of Service</string>
    <string name="terms_of_service_url">https://www.delsquaredllc.com/terms-of-service</string>
    <string name="terms_of_service_div_id">div-tos</string>
    <string name="terms_of_service_version_div_id">div-tos-ver</string>
    <string name="terms_of_service_filename">legal/TermsofService.txt</string>
    <string name="terms_of_service_defaultversion">0.00</string>
    <string name="privacy_policy_activity_title">Privacy Policy</string>
    <string name="privacy_policy_url">https://www.delsquaredllc.com/privacy-policy</string>
    <string name="privacy_policy_div_id">div-pp</string>
    <string name="privacy_policy_version_div_id">div-pp-ver</string>
    <string name="privacy_policy_filename">legal/PrivacyPolicy.txt</string>
    <string name="privacy_policy_defaultversion">0.00</string>
    <string name="dialog_accepttermsnointernet_title">Use Agreement</string>
    <string name="dialog_accepttermsnointernet_termsurlplaceholder">__tosurl__</string>
    <string name="dialog_accepttermsnointernet_privacypolicyurlplaceholder">__ppurl__</string>
    <string name="dialog_accepttermsnointernet_termsplaceholder">__tos__</string>
    <string name="dialog_accepttermsnointernet_privacypolicyplaceholder">__pp__</string>
    <string name="dialog_accepttermsnointernet_appnameplaceholder">__appname__</string>
    <string name="dialog_accepttermsnointernet_welcome"><![CDATA[
    	Welcome to __appname__!<br /><br />
    ]]></string>
    <string name="dialog_accepttermsnointernet_nointernet"><![CDATA[
        We were unable to connecto to the internet.<br /><br />
    ]]></string>
    <string name="dialog_accepttermsnointernet_newversionterms"><![CDATA[
        We have updated our __tos__.<br /><br />
    ]]></string>
    <string name="dialog_accepttermsnointernet_newversionprivacypolicy"><![CDATA[
        We have updated our __pp__.<br /><br />
    ]]></string>
    <string name="dialog_accepttermsnointernet_newversionboth"><![CDATA[
        We have updated our __tos__ and __pp__.<br /><br />
    ]]></string>
    <string name="dialog_accepttermsnointernet_noneaccepted"><![CDATA[]]></string>
    <string name="dialog_accepttermsnointernet_text"><![CDATA[
		Please read the <a href="__tosurl__">__tos__</a> and <a href="__ppurl__">__pp__</a> before proceeding.<br /><br />
		By pressing accept, you acknowledge that you have read and agree to the __tos__ and __pp__.
	]]></string>
    <string name="dialog_accepttermsnointernet_accept">Accept</string>
    <string name="dialog_accepttermsnointernet_checkboxlabel">I have read and accept the Terms of Service and Privacy Policy.</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="mainactivity_gamemenu_timeattack_title">Time attack</string>
    <string name="mainactivity_gamemenu_timeattack_description">Strike the ground as many times as you can before time runs out</string>
    <string name="mainactivity_gamemenu_timeattack_bestscore">Best score: %d</string>
    <string name="mainactivity_gamemenu_ladder_title">Ladder</string>
    <string name="mainactivity_gamemenu_ladder_description">Test your skill as you ascend to the heavens through increasingly difficult levels</string>
    <string name="mainactivity_gamemenu_ladder_currentlevel">Current level: %d</string>
    <string name="mainactivity_settingsmenu_settings_title">Settings</string>
    <string name="mainactivity_settingsmenu_settings_description">Change the game settings</string>
    <string name="mainactivity_settingsmenu_about_title">About</string>
    <string name="mainactivity_settingsmenu_about_description">View app info</string>
    <string name="fragment_main_textview_gamemenu_title">Games</string>
    <string name="fragment_main_textview_settingsmenu_title">Options</string>
    <string name="fragment_main_textview_ladder_beat_game">You beat the ladder!</string>
    <plurals name="fragment_main_textview_timeattack_achieved_highest_award">
        <item quantity="one">You earned %d bolt!</item>
        <item quantity="other">You earned %d bolts!</item>
    </plurals>
    <string name="mainactivity_settingsmenu_store_title">Store</string>
    <string name="mainactivity_settingsmenu_store_description">Browse and purchase extra goodies!</string>
    <string name="title_activity_instructions">How to play</string>
    <string name="fragment_instructions_checkbox_nevershowthisagain">Never show this again</string>
    <string name="fragment_instructions_button_playnow">Play now</string>
    <string name="fragment_instructions_imageview_content_description">Instructions on how to play</string>
    <string name="title_activity_game">@string/app_name</string>
    <string name="game_text_stopped_tap_to_start">Tap to start</string>
    <string name="game_text_ended_retry">Tap to retry</string>
    <string name="game_text_ended_continue">Tap to continue</string>
    <string name="game_text_ending_game_over">Ending…</string>
    <string name="game_text_template_start_countdown">%d</string>
    <string name="game_text_template_timer">%2d</string>
    <string name="game_text_template_counter">%3d</string>
    <string name="game_text_template_counter_with_goal" formatted="true">%3d/%d</string>
    <string name="game_text_level_decrement"><![CDATA[< ]]></string>
    <string name="game_text_template_current_level">Level %d</string>
    <string name="game_text_level_increment"><![CDATA[ >]]></string>
    <string name="game_text_template_fps">FPS: %,.1f</string>
    <string name="game_text_template_high_score">High score: %d</string>
    <string name="game_text_new_high_score">New high score!</string>
    <string name="game_text_level_complete">Level complete!</string>
    <string name="game_text_level_failed">Level failed</string>
    <string name="game_text_congratulations">Congratulations!</string>
    <string name="game_text_beat_last_level">You beat the ladder!</string>
    <string name="game_text_template_click_target_properties_X" formatted="true" tools:ignore="TypographyDashes">X: %8.2f, --Y: %8.2f</string>
    <string name="game_text_template_click_target_properties_dX" formatted="true" tools:ignore="TypographyDashes">S: %8.2f, --D: %8.2f</string>
    <string name="game_text_template_click_target_properties_d2X" formatted="true">dS: %8.2f, -dD: %8.2f</string>
    <string name="game_text_template_click_target_properties_Radius" formatted="true">R: %8.2f, Rot: %8.2f</string>
    <string name="game_text_template_click_target_properties_dRadius" formatted="true">dR: %8.2f, dRo: %8.2f</string>
    <string name="game_text_template_click_target_properties_d2Radius" formatted="true">d2R: %8.2f, d2R: %8.2f</string>
    <string name="game_text_template_click_target_properties_energy" formatted="true">E: %8.2f</string>
    <string name="graphics_textkey_default">default</string>
    <string name="graphics_textkey_start_countdown">start_countdown</string>
    <string name="graphics_textkey_timer">timer</string>
    <string name="graphics_textkey_counter">counter</string>
    <string name="graphics_textkey_counter_goal_achieved">counter_goal_achieved</string>
    <string name="graphics_textkey_level_decrement">level_decrement</string>
    <string name="graphics_textkey_level">level</string>
    <string name="graphics_textkey_level_increment">level_increment</string>
    <string name="graphics_textkey_new_high_score">new_high_score</string>
    <string name="graphics_textkey_level_complete">level_complete</string>
    <string name="graphics_textkey_level_failed">level_failed</string>
    <string name="graphics_textkey_fps">fps</string>
    <string name="graphics_textkey_high_score">high_score</string>
    <string name="graphics_textkey_other">other</string>
    <string name="graphics_textkey_congratulations">congratulations</string>
    <string name="graphics_textkey_beat_last_level">beat_last_level</string>
    <string name="fragment_settings_textview_gamehistorymenu_title">Game history</string>
    <string name="fragment_settings_button_delete_game_history">Delete game history</string>
    <string name="fragment_settings_textview_gamehistorymenu_delete_game_history_warning">Warning: This will reset your high scores and levels unlocked!</string>
    <string name="fragment_settings_textview_settings_title">Settings</string>
    <string name="fragment_settings_checkbox_show_instructions">Show instructions</string>
    <string name="fragment_settings_button_change_consent">Update ad consent</string>
    <string name="activity_about_textview_aboutapp">App info:</string>
    <string name="activity_about_aboutapp_versionlabel">Current version</string>
    <string name="activity_about_aboutapp_defaultversion">v1.01</string>
    <string name="activity_about_legal_legallabel">Legal mumbo jumbo:</string>
    <string name="activity_about_legal_termsandconditions">Terms of service</string>
    <string name="activity_about_legal_privacypolicy">Privacy policy</string>
    <string name="activity_about_aboutapp_copyright">%1$s&#8482;, Copyright &#169; %2$s %3$s</string>
    <string name="menu_item_store_available_default_title">Default item</string>
    <string name="menu_item_store_available_default_description">Default description</string>
    <string name="menu_item_store_available_default_price">Default price</string>
    <string name="menu_item_store_available_tap_to_buy">Tap to buy</string>
    <string name="menu_item_store_available_imageview_bolt_content_description">Image of a lightning bolt</string>
    <string name="fragment_instructions_checkbox_nevershowthisagain_text">Never show this again</string>
    <string name="fragment_instructions_button_playnow_text">Play now</string>
</resources>