<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MenuItemStore">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_item_store_available_imageview_bolt_content_description"
            android:src="@drawable/store_bolt_transparent"/>

        <TextView
            android:id="@+id/menu_item_store_title"
            style="@style/MenuItemStoreTitle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/menu_item_store_available_default_title"/>

        <TextView
            android:id="@+id/menu_item_store_price"
            style="@style/MenuItemStorePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxLines="1"
            android:text="@string/menu_item_store_available_default_price"/>

    </LinearLayout>

    <TextView
        android:id="@+id/menu_item_store_description"
        style="@style/MenuItemStoreText"
        android:text="@string/menu_item_store_available_default_description"/>

    <TextView
        android:id="@+id/menu_item_store_tap_to_buy"
        style="@style/MenuItemStoreText"
        android:textColor="@color/Orange"
        android:text="@string/menu_item_store_available_tap_to_buy"/>

</LinearLayout>