<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_instructions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ActivityInstructions">

    <ImageView
        android:id="@+id/fragment_instructions_imageview_instructions"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:contentDescription="@string/fragment_instructions_imageview_content_description"
        android:src="@drawable/animation_instructions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/MainMenuSection">

        <CheckBox
            android:id="@+id/fragment_instructions_checkbox_nevershowthisagain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkChanged_NeverShowThisAgain"
            android:text="@string/fragment_instructions_checkbox_nevershowthisagain_text"/>

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/fragment_instructions_playnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/DarkGreen"
            android:onClick="onClick_PlayNow"
            android:text="@string/fragment_instructions_button_playnow_text"/>

    </LinearLayout>



</LinearLayout>
